[package]
edition = "2024"
name = "ht16k33"
version = "0.4.0"
authors = ["Jason Peacock <jason@jasonpeacock.com>"]
description = "Rust driver for the Holtek HT16K33 'RAM Mapping 16*8 LED Controller Driver with keyscan'"
keywords = ["no-std", "led", "driver", "display", "embedded-hal"]
categories = ["hardware-support", "no-std", "embedded"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jasonpeacock/ht16k33"
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
bitflags           = "2.11"
embedded-hal       = "1.0"
log = { version = "0.4.29", default-features = false }
serde              = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
failure            = "0.1"
embedded-hal-mock  = { version = "0.11", default-features = false, features = ["eh1"] }
version-sync       = "0.9"
